# DID-Software-Development-Project

./: CITATION  LICENSE  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: did.tex  did_pres.tex  refs.bib  task_paper.py
src/did/: __init__.py  config.py
src/did/data_management/: cps_clean_data.py  data_info.yaml  empirical_clean_data.py  task_data_management.py
src/did/final/: plot.py  task_final.py
src/did/monte_carlo_analysis/: cps_monte_carlo.py  empirical_regression.py  heterogenous_AR1.py  homogenous_AR1.py  homogenous_MA1.py  subfunctions.py  synthetic_data_gen.py  task_analysis.py
tests/analysis/: test_data_gen.py  test_subfunctions.py
tests/data_management/: test_cps_clean_data.py  test_empirical_clean_data.py
