[metadata]
name = did
description = epp project diff in diff
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Palit2308/did
author = sneha, biswajit
author_email = s53bpali@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/Palit2308/did
    Documentation = https://github.com/Palit2308/did
    Github = https://github.com/Palit2308/did
    Tracker = https://github.com/Palit2308/did/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/did/_version.py
